--- a/frontend/proto/leaflet_map.html
+++ b/frontend/proto/leaflet_map.html
@@ -13,7 +13,8 @@
   <link href="./my_src/bundle-style_bbd622.css" rel="stylesheet">
 
   <meta name="msapplication-TileColor" content="#2b5797">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+    integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
     integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
     crossorigin="" />
@@ -153,15 +154,36 @@
   <script>
     var mymap = L.map('mapid').setView([39.9877, 116.3075], 13);
 
-    L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-      maxZoom: 18,
-      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-        '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-        'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-      id: 'mapbox.streets'
+    // tile
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+      attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+      subdomains: 'abcd',
+      maxZoom: 19
     }).addTo(mymap);
 
-    L.marker([39.9877, 116.3075]).addTo(mymap)
+    // set my marker
+    const myCustomColour = '#98986f'
+    const markerHtmlStyles = `
+      background-color: ${myCustomColour};
+      width: 2.5rem;
+      height: 2.5rem;
+      display: block;
+      left: -1.5rem;
+      top: -1.5rem;
+      position: relative;
+      border-radius: 3rem 3rem 0;
+      transform: rotate(45deg);
+      border: 1px solid #FFFFFF;`
+
+    const myicon = L.divIcon({
+
+      iconAnchor: [0, 24],
+      labelAnchor: [-6, 0],
+      popupAnchor: [0, -36],
+      html: `<span style="${markerHtmlStyles}" />`
+    })
+
+    L.marker([39.9877, 116.3075], { icon: myicon }).addTo(mymap)
       .bindPopup("<b>你好！</b><br />我在北京大学第三教学楼！").openPopup();
 
     var popup = L.popup();
@@ -175,14 +197,14 @@
         .openOn(mymap);
 
       // marker
-      L.marker(e.latlng).addTo(mymap);
+      L.marker(e.latlng, { icon: myicon }).addTo(mymap);
       var latlngs = [
         lastLoc,
         e.latlng
       ]
 
       // line
-      var polyline = L.polyline(latlngs, { color: '#3388ff' }).addTo(mymap);
+      var polyline = L.polyline(latlngs, { color: '#98986f', opacity: 0.5 }).addTo(mymap);
       lastLoc = e.latlng;
     }
 
